<resources>
    <string name="app_name">SahilPatel_N01390758_Android</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="percentage">%</string>
    <string name="exponent">^</string>
    <string name="pi">π</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="substract">-</string>
    <string name="clear">C</string>
    <string name="point">.</string>
    <string name="equals">=</string>

    <string name="memoryPlus">M+</string>
    <string name="memoryMinus">M-</string>
    <string name="MemoryRecalll">MR</string>
    <string name="MemoryClear">MC</string>
    <string name="display">Enter a Value </string>


</resources>